--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
       </div> <!-- /container -->
 
       <form>
-        <div class="form-group">
+        <div class="container">
           <label for="exampleInputEmail1">Email address</label>
           <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
         </div>
@@ -98,6 +98,8 @@
           <label for="exampleFormControlTextarea1">Example textarea</label>
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
+
+        <button type="submit" class="btn btn-success">Submit</button>
 
       </form>
 
