--- a/contact.html
+++ b/contact.html
@@ -75,26 +75,26 @@
           <input type="email" class="form-control" id="exampleInputEmail1" placeholder="Email">
         </div>
 
-        <div class="form-check">
+        <div class="container">
           <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
           <label class="form-check-label" for="exampleRadios1">
             Obecný dotaz
           </label>
         </div>
-        <div class="form-check">
+        <div class="container">
           <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
           <label class="form-check-label" for="exampleRadios2">
             Konkrétní dotaz
           </label>
         </div>
-        <div class="form-check">
+        <div class="container">
           <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios3" value="option3" disabled>
           <label class="form-check-label" for="exampleRadios3">
             Disabled radio
           </label>
         </div>
 
-        <div class="form-group">
+        <div class="container">
           <label for="exampleFormControlTextarea1">Example textarea</label>
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
