úkol_5 - format form3

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
         <hr>
 
       </div> <!-- /container -->
-
+      <div class="container">
       <form>
         <div class="container">
           <label for="exampleInputEmail1">Email address</label>
@@ -102,6 +102,7 @@
         <button type="submit" class="btn btn-success">Submit</button>
 
       </form>
+      </div>
 
     </main>
 
