--- a/contact.html
+++ b/contact.html
@@ -99,8 +99,10 @@
           <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
         </div>
 
-        <button type="submit" class="btn btn-success">Submit</button>
-
+        <div class="container">
+          <button type="submit" class="btn btn-success">Submit</button>
+        </div>
+        
       </form>
       </div>
 
