--- a/about.html
+++ b/about.html
@@ -35,6 +35,9 @@
           <li class="nav-item">
             <a class="nav-link" href="#">Contact</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="career.html">Career</a>
+          </li>
         </ul>
       </div>
     </nav>
